Alignment fixes to the trigger details view in the right panel of the Flow details page.

--- a/src/client/app/flogo.form-builder.configuration.trigger/components/form-builder.configuration.trigger.less
+++ b/src/client/app/flogo.form-builder.configuration.trigger/components/form-builder.configuration.trigger.less
@@ -78,9 +78,10 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 28px;
+  height: 31px;
   position: relative;
-  margin-right: -19px;
+  margin: 0 -19px;
+  padding-left: 19px;
 
   .settings__menu {
   }
